# internal/apiserver/router.go
@@ -1,20 +1,10 @@
-/*
- * Swagger Test Game - OpenAPI 3.1
- *
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
- *
- * API version: 1.0.11
- * Contact: srgkharkov@gmail.com
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-package swagger
+package apiserver
 
 import (
 	"fmt"
+	"github.com/gorilla/mux"
 	"net/http"
 	"strings"
-
-	"github.com/gorilla/mux"
 )
 
 type Route struct {
@@ -58,7 +48,7 @@ var routes = Routes{
 	Route{
 		"AddConfig",
 		strings.ToUpper("Post"),
-		"/configs",
+		"/addconfig",
 		AddConfig,
 	},
 
@@ -72,7 +62,7 @@ var routes = Routes{
 	Route{
 		"GetResult",
 		strings.ToUpper("Get"),
-		"/result",
+		"/getresult",
 		GetResult,
 	},
 }
